[package]
name = "wasm_threads"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"
rayon = "1.10.0"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"] }
# wasm_thread = "0.3.0"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
